--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ollamax"]
 	path = ollamax
-	url = git@github.com:byebyebruce/ollamax.git
+	url = https://github.com/byebyebruce/ollamax.git
