--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
-chat: # 聊天设置
-  model: qwen # qwen:0.5b qwen:1.8b qwen:4b qwen:8b gemma gemma:7b mistral (https://ollama.com/library)
+llm: # 聊天设置
+  model: qwen:0.5b # qwen:1.8b qwen:4b qwen:7b qwen:14b gemma gemma:7b mistral (https://ollama.com/library)
   max_history: 10 # 最大历史记录数
   system_prompt: 你是AI助手，你要尽力回答用户提出的任何问题。
 
@@ -8,3 +8,9 @@ wechat: # 个人微信聊天机器人
   filter_prefix: "" # 聊天内容过滤前缀, 为空则不过滤
   trigger_prefix: "" # 聊天内容触发前缀, 为空则所有触发
   msg_tmpl: "[🤖]:@{{.SenderName}}\n{{.Content}}" # 机器人回复消息模板
+
+lark: # 飞书(如果只开微信机器人，可以不填写)
+  app_id:
+  app_secret:
+  verification_token:
+  encrypt_key:
